syntax = "proto3";

package org.v1;

import "org/v1/messages.proto";

service OrgsService {
  rpc GetOrg(org.v1.GetOrgRequest) returns (org.v1.GetOrgResponse) {}
  rpc GetOrgsByMember(org.v1.GetOrgsByMemberRequest) returns (org.v1.GetOrgsByMemberResponse) {}
  rpc UpsertOrg(org.v1.UpsertOrgRequest) returns (org.v1.UpsertOrgResponse) {}
  rpc DeleteOrg(org.v1.DeleteOrgRequest) returns (org.v1.DeleteOrgResponse) {}
}
